TUSB320 support added.

--- a/arch/arm/configs/s3_teso_defconfig
+++ b/arch/arm/configs/s3_teso_defconfig
@@ -167,6 +167,7 @@ CONFIG_MAILBOX=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_PM_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
+CONFIG_EXTCON_USBC_TUSB320=y
 CONFIG_IIO=y
 CONFIG_AXP20X_ADC=y
 CONFIG_PWM=y
