--- a/arch/arm/boot/dts/sun8i-s3-vink-teso.dts
+++ b/arch/arm/boot/dts/sun8i-s3-vink-teso.dts
@@ -10,7 +10,7 @@
 #include <dt-bindings/input/input.h>
 
 / {
-	model = "Sipeed Lichee Zero Plus";
+	model = "Vink Teso S3";
 	compatible = "sipeed,lichee-zero-plus", "sochip,s3",
 		     "allwinner,sun8i-v3";
 
@@ -22,6 +22,75 @@
 	chosen {
 		stdout-path = "serial0:115200n8";
 	};
+	
+	leds {
+		compatible = "gpio-leds";
+		
+		blue1_led {
+			label = "licheepi:blue:usr";
+			gpios = <&pio 3 4 GPIO_ACTIVE_LOW>; /* PD4 */
+		};
+
+		green1_led {
+			label = "licheepi:green:usr";
+			gpios = <&pio 4 16 GPIO_ACTIVE_LOW>; /* PE16 */
+			default-state = "on";
+		};
+
+		red1_led {
+			label = "licheepi:red:usr";
+			gpios = <&pio 4 2 GPIO_ACTIVE_LOW>; /* PE2 */
+		};
+		
+        blue2_led {
+			label = "licheepi:blue:usr";
+			gpios = <&pio 3 11 GPIO_ACTIVE_LOW>; /* PD11 */
+		};
+
+		green2_led {
+			label = "licheepi:green:usr";
+			gpios = <&pio 3 8 GPIO_ACTIVE_LOW>; /* PD8 */
+			default-state = "on";
+		};
+
+		red2_led {
+			label = "licheepi:red:usr";
+			gpios = <&pio 3 10 GPIO_ACTIVE_LOW>; /* PD10 */
+		};
+		
+//        blue3_led {
+//			label = "licheepi:blue:usr";
+//			gpios = <&pio 1 10 GPIO_ACTIVE_LOW>; /* PB10 */
+//		};
+//
+//		green3_led {
+//			label = "licheepi:green:usr";
+//			gpios = <&pio 1 6 GPIO_ACTIVE_LOW>; /* PB6 */
+//			default-state = "on";
+//		};
+//
+//		red3_led {
+//			label = "licheepi:red:usr";
+//			gpios = <&pio 1 7 GPIO_ACTIVE_LOW>; /* PB7 */
+//		};
+		
+        blue4_led {
+			label = "licheepi:blue:usr";
+			gpios = <&pio 3 16 GPIO_ACTIVE_LOW>; /* PD16 */
+		};
+
+		green4_led {
+			label = "licheepi:green:usr";
+			gpios = <&pio 3 14 GPIO_ACTIVE_LOW>; /* PD14 */
+			default-state = "on";
+		};
+
+		red4_led {
+			label = "licheepi:red:usr";
+			gpios = <&pio 3 15 GPIO_ACTIVE_LOW>; /* PD15 */
+		};
+	};
+
 
 	reg_vcc3v3: vcc3v3 {
 		compatible = "regulator-fixed";
@@ -55,8 +124,7 @@
                 reg = <0x000000 0x80000>;
             };
         };
-    };	
-	
+
 	cedarx: video-codec@1c0e000 {
         compatible = "allwinner,sun8i-v3-cedar";
         reg = <0x01c0e000 0x1000>;
@@ -213,7 +281,14 @@
 &i2c0 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&i2c0_pins>;
-	status = "okay";	
+	status = "okay";
+	
+    typec_tusb320:tusb320@60 {
+        compatible = "ti,tusb320";
+        reg = <0x60>;
+        int-gpios = <&pio 1 10 GPIO_ACTIVE_LOW>; /* PB10 */
+        otg-vbus-gpios = <&pio 3 9 GPIO_ACTIVE_LOW>; /* PD9 */
+    };	
 	
     axp203: pmic@34 {
         compatible = "x-powers,axp203", "x-powers,axp209";
@@ -222,7 +297,7 @@
         interrupts = <GIC_SPI 32 IRQ_TYPE_LEVEL_HIGH>;
         interrupt-controller;
         #interrupt-cells = <1>; 
-        
+       	
         regulators {
             x-powers,dcdc-freq = <1500>;
 
