--- a/arch/arm/configs/s3_teso_defconfig
+++ b/arch/arm/configs/s3_teso_defconfig
@@ -134,7 +134,10 @@ CONFIG_SND_SUN8I_CODEC_ANALOG=y
 CONFIG_SND_SUN4I_I2S=y
 CONFIG_SND_SUN4I_SPDIF=y
 CONFIG_USB=y
+CONFIG_USB_OTG=y
+CONFIG_USB_OTG_FSM=y
 CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
@@ -143,6 +146,10 @@ CONFIG_USB_MUSB_SUNXI=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGETFS=m
+CONFIG_TYPEC=y
+CONFIG_TYPEC_TCPM=y
+CONFIG_TYPEC_TCPCI=y
+CONFIG_TYPEC_UCSI=y
 CONFIG_MMC=y
 CONFIG_MMC_SUNXI=y
 CONFIG_NEW_LEDS=y
