--- a/arch/arm/boot/dts/sun8i-v3s-generic.dts
+++ b/arch/arm/boot/dts/sun8i-v3s-generic.dts
@@ -132,13 +132,13 @@
         lte_pwr {
 			label = "lte_pwr";
 			gpios = <&pio 4 14 GPIO_ACTIVE_HIGH>; /* PE14 */
-			default-state = "on";
+			default-state = "off";
 		};
 		
         lte_w_disable {
 			label = "lte_w_disable";
 			gpios = <&pio 4 13 GPIO_ACTIVE_HIGH>; /* PE13 */
-			default-state = "on";
+			default-state = "off";
 		};
         
         lte_3_3v {
