--- a/arch/arm/configs/funcart_battery_board_linux_defconfig
+++ b/arch/arm/configs/funcart_battery_board_linux_defconfig
@@ -136,6 +136,7 @@ CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_ACM=y
 CONFIG_USB_WDM=y
+CONFIG_USB_STORAGE=y
 CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_SUNXI=y
 CONFIG_USB_SERIAL=y
